[package]
name = "photondb"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The PhotonDB Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photondb"
description = "A storage engine for modern hardware."

[workspace]
members = ["bin/tools"]

[dependencies]
async-trait = "0.1.57"
bitflags = "1.3.2"
crossbeam-epoch = "0.9.10"
futures = "0.3.24"
log = "0.4"
once_cell = "1.15"
photonio = { git = "https://github.com/photondb/photonio.git" }
prost = "0.11"
thiserror = "1.0.37"
roaring = "0.10"
bytes = "1.2.1"
libc = "0.2.137"
moka = { version = "0.9", features = ["future"] }

[profile.bench]
debug = true

[profile.release]
debug = true

[dev-dependencies]
env_logger = "0.9.1"
rand = "0.8.5"
tempdir = "0.3.7"
