[workspace]
members = ["photondb", "photondb-tools"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The PhotonDB Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photondb"

[workspace.dependencies]
photonio = { git = "https://github.com/photondb/photonio.git" }

[profile.bench]
debug = true

[profile.release]
debug = true
