[workspace]
members = ["photondb", "photondb-tools"]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "MIT"
authors = ["The PhotonDB Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photondb"

[workspace.dependencies]
photonio = "0.0.5"

[profile.bench]
debug = true

[profile.release]
debug = true
