[package]
name = "photondb-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "PhotonDB tools"

[dependencies]
async-trait = "0.1.57"
bitflags = "1.3.2"
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.10"
futures = "0.3.24"
log = "0.4.17"
hdrhistogram = "7.5.2"
photonio = { workspace = true }
photondb = { path = "../photondb", version = "0.0.4" }
rand = { version = "0.8.5", features = ["small_rng"] }
thiserror = "1.0.37"
chrono = "0.4"
regex = "1.7.0"
