[package]
name = "photondb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A storage engine for modern hardware."

[dependencies]
async-trait = "0.1.57"
bitflags = "1.3.2"
crossbeam-epoch = "0.9.10"
futures = "0.3.24"
log = "0.4"
once_cell = "1.15"
photonio = { workspace = true }
prost = "0.11"
thiserror = "1.0.37"
bytes = "1.2.1"
libc = "0.2.137"
snap = "1.1.0"
zstd = "0.12"
zstd-safe = "6.0"
crc32fast = "1.3"
parking_lot = "0.12"

[dev-dependencies]
env_logger = "0.9.1"
rand = "0.8.5"
tempdir = "0.3.7"
quickcheck = "1"
rand_distr = "0.4"
tempfile = "3.3.0"
