[package]
name = "photondb-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3"
bumpalo = { version = "3.10", features = ["collections"] }
crossbeam-epoch = "0.9"
jemallocator = "0.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "concurrent"
harness = false
