[package]
name = "photondb-engine"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photondb"
description = "The PhotonDB storage engine."
categories = ["database-implementations", "data-structures"]

[dependencies]
photonio = { version = "0.0.1", path = "../photonio" }
async-trait = "0.1"
bitflags = "1.3"
bumpalo = { version = "3.10", features = ["collections"] }
bytes = "1.2"
crossbeam-epoch = "0.9"
jemallocator = "0.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "stdmap"
bench = false
harness = false
