[package]
name = "photonio"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photondb"
description = "An asynchronous runtime for data-intensive applications."
categories = ["asynchronous"]

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.5"
